# ctxhelm

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.ctxhelm/: distribution-metadata-smoke.json
.ctxhelm/benchmarks/: refactoringminer-v23.json
.ctxhelm/e2e/: phase100-resource-backed-gap-summaries-proof.json  phase104-context-area-next-read-paths-no-refminer-proof.json  phase105-history-unavailable-proof.json  phase107-hydrated-four-repo-cold-proof.json  phase107-hydrated-four-repo-warm-proof.json  phase108-cold-git-bounded-proof.json  phase109-environment-health-proof.json  phase110-clean-fixture-proof.json  phase112-clean-release-gate-summary.json  phase113-release-candidate-status.json  phase114-github-release.json  phase114-release-candidate-status.json  phase114-release-proof-summary.json  phase115-public-archive-install.json  phase116-public-real-client-smoke.json  phase117-context-area-role-signals.json  phase118-context-area-resource-scope.json  phase119-index-env-lock-proof.json  phase120-ci-release-gate-proof.json  phase121-ci-node24-runtime-proof.json  phase122-public-real-client-compat-proof.json  phase123-context-area-coverage-profile.json  phase124-context-area-inspection-strategy.json  phase125-lexical-comparison-proof.json  phase126-agent-evidence-lexical-comparison.json  phase127-narrow-validation-test-reserve.json  phase128-broad-operational-floor.json  phase129-public-release-freshness.json  phase130-github-release.json  phase130-public-archive-install.json  phase130-public-real-client-smoke.json  phase130-public-release-freshness.json  phase131-github-release-verify.json  phase131-github-release.json  phase131-public-archive-install.json  phase131-public-real-client-smoke.json  phase131-public-release-freshness.json  phase132-claude-workflow-eval.json  phase133-product-readme-positioning.json  phase134-github-release-verify.json  (+179 more)
.ctxpack/benchmarks/: refactoringminer-v23.json
.ctxpack/e2e/: phase100-resource-backed-gap-summaries-proof.json  phase104-context-area-next-read-paths-no-refminer-proof.json  phase105-history-unavailable-proof.json  phase107-hydrated-four-repo-cold-proof.json  phase107-hydrated-four-repo-warm-proof.json  phase108-cold-git-bounded-proof.json  phase109-environment-health-proof.json  phase110-clean-fixture-proof.json  phase112-clean-release-gate-summary.json  phase113-release-candidate-status.json  phase114-github-release.json  phase114-release-candidate-status.json  phase114-release-proof-summary.json  phase115-public-archive-install.json  phase116-public-real-client-smoke.json  phase117-context-area-role-signals.json  phase118-context-area-resource-scope.json  phase119-index-env-lock-proof.json  phase120-ci-release-gate-proof.json  phase121-ci-node24-runtime-proof.json  phase122-public-real-client-compat-proof.json  (+82 more)
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
crates/ctxhelm/: Cargo.toml
crates/ctxhelm-compiler/: Cargo.toml
crates/ctxhelm-compiler/src/: agent_preview.rs  cards.rs  eval.rs  graph.rs  lib.rs  packs.rs  planning.rs  policy.rs  ranking.rs  workspace.rs
crates/ctxhelm-index/: Cargo.toml
crates/ctxhelm-index/src/: artifacts.rs  dependencies.rs  feedback.rs  freshness.rs  git.rs  inventory.rs  lib.rs  policy.rs  related_tests.rs  search.rs  semantic.rs  storage.rs  symbols.rs  traces.rs  tree_sitter_backend.rs  workspace.rs
crates/ctxhelm-mcp/: Cargo.toml
crates/ctxhelm-mcp/src/: lib.rs  prompts.rs  resources.rs  schemas.rs  tools.rs
crates/ctxhelm/src/: main.rs  proof_inspector.rs
crates/ctxhelm/tests/: cli_compat.rs  release_packaging.rs
crates/ctxhelm/tests/common/: mod.rs
crates/ctxpack/: Cargo.toml
crates/ctxpack-compiler/: Cargo.toml
crates/ctxpack-compiler/src/: agent_preview.rs  cards.rs  eval.rs  graph.rs  lib.rs  packs.rs  planning.rs  policy.rs  ranking.rs  workspace.rs
crates/ctxpack-core/: Cargo.toml
crates/ctxpack-core/src/: contracts.rs  init.rs  lib.rs
crates/ctxpack-index/: Cargo.toml
crates/ctxpack-index/src/: artifacts.rs  dependencies.rs  feedback.rs  freshness.rs  git.rs  inventory.rs  lib.rs  policy.rs  related_tests.rs  search.rs  semantic.rs  storage.rs  symbols.rs  traces.rs  workspace.rs
crates/ctxpack-mcp/: Cargo.toml
crates/ctxpack-mcp/src/: lib.rs  prompts.rs  protocol.rs  resources.rs  schemas.rs  tools.rs
crates/ctxpack/src/: main.rs
crates/ctxpack/tests/: cli_compat.rs  release_packaging.rs
crates/ctxpack/tests/common/: mod.rs
docs/: agent-preview.md  agent-setup.md  architecture.md  benchmarking.md  brand.md  components.md  context-compiler.md  context-governor.md  data-contracts.md  demo.md  distribution.md  feature-exports.md  feedback.md  graph.md  inspector.md  integrations.md  learned-policy.md  memory.md  paired-baselines.md  policy-embedding.md  precision.md  public-project-summary.md  quickstart.md  release-governance.md  release.md  retrieval-health.md  semantic.md  shared-artifacts.md  storage.md  troubleshooting.md  workspace.md
scripts/: audit-release-artifact.sh  check-agent-run-proof.py  check-product-proof.py  check-public-release-freshness.sh  check-release-docs.sh  e2e-agent-client-availability.sh  e2e-agent-run-codex.sh  e2e-agent-run.sh  e2e-claude-workflow.sh  e2e-codex-memory-outcome-suite.sh  generate-demo-artifacts.sh  measure-memory-generalization-suite.sh  measure-memory-generalization.sh  prepare-benchmark-corpus.sh  prepare-proof-fixtures.sh  release-candidate-rollback.sh  release-candidate-status.sh  release-gate.sh  release-package.sh  render-homebrew-formula.sh  smoke-agent-native-fallback.sh  smoke-agent-preview.sh  smoke-claude-mcp.sh  smoke-codex-mcp.sh  smoke-cursor-mcp.sh  smoke-cursor-real-client.sh  smoke-demo-artifacts.sh  smoke-distribution-metadata.sh  smoke-feedback.sh  smoke-first-pack.sh  smoke-governor.sh  smoke-graph.sh  smoke-historical-eval.sh  smoke-inspector.sh  smoke-mcp-protocol.sh  smoke-memory-benchmark-lift.sh  smoke-memory-history-lift.sh  smoke-memory-parent-snapshot-lift.sh  smoke-memory-reuse.sh  smoke-memory.sh  (+17 more)
(+919 files in other folders)
