[workspace]
members = [
  "crates/ctxpack",
  "crates/ctxpack-core",
  "crates/ctxpack-index",
  "crates/ctxpack-compiler",
  "crates/ctxpack-mcp",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["serde"] }
