[workspace]
members = [
  "crates/ctxpack",
  "crates/ctxpack-core",
  "crates/ctxpack-index",
  "crates/ctxpack-compiler",
  "crates/ctxpack-mcp",
]
resolver = "2"

[workspace.package]
version = "1.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/thromel/ctxpack"
readme = "README.md"
description = "Local-first context broker that prepares safe repository context packs for coding agents"
rust-version = "1.87"

[workspace.dependencies]
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["serde"] }
