[workspace]
members = [
  "crates/ctxhelm",
  "crates/ctxhelm-core",
  "crates/ctxhelm-index",
  "crates/ctxhelm-compiler",
  "crates/ctxhelm-mcp",
]
resolver = "2"

[workspace.package]
version = "1.1.7"
edition = "2021"
license = "MIT"
repository = "https://github.com/thromel/ctxhelm"
readme = "README.md"
description = "ctxhelm CLI: local-first context broker that prepares safe repository context packs for coding agents"
rust-version = "1.87"

[workspace.dependencies]
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
fastembed = { version = "=4.9.0", default-features = false, features = ["ort-download-binaries", "hf-hub-native-tls"] }
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tree-sitter = "0.25.10"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
uuid = { version = "1", features = ["serde"] }
