[package]
name = "ctxhelm-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description.workspace = true
rust-version.workspace = true

[features]
default = []
local-embeddings = ["ctxhelm-index/local-embeddings"]

[dependencies]
ctxhelm-core = { path = "../ctxhelm-core", version = "2.4.6" }
ctxhelm-index = { path = "../ctxhelm-index", version = "2.4.6" }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
uuid = { workspace = true, features = ["v4"] }
