[package]
name = "ctxhelm-index"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description.workspace = true
rust-version.workspace = true

[features]
default = ["tree-sitter-parsers"]
local-embeddings = ["dep:fastembed"]
tree-sitter-parsers = [
    "dep:tree-sitter",
    "dep:tree-sitter-go",
    "dep:tree-sitter-java",
    "dep:tree-sitter-kotlin-ng",
    "dep:tree-sitter-python",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-typescript",
]

[dependencies]
blake3.workspace = true
ctxhelm-core = { path = "../ctxhelm-core", version = "1.1.9" }
fastembed = { workspace = true, optional = true }
ignore.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tree-sitter = { workspace = true, optional = true }
tree-sitter-go = { workspace = true, optional = true }
tree-sitter-java = { workspace = true, optional = true }
tree-sitter-kotlin-ng = { workspace = true, optional = true }
tree-sitter-python = { workspace = true, optional = true }
tree-sitter-rust = { workspace = true, optional = true }
tree-sitter-typescript = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v5"] }

[dev-dependencies]
tempfile.workspace = true
