[package]
name = "ctxhelm-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description.workspace = true
rust-version.workspace = true

[features]
default = []
local-embeddings = [
  "ctxhelm-compiler/local-embeddings",
  "ctxhelm-index/local-embeddings",
]

[dependencies]
ctxhelm-compiler = { path = "../ctxhelm-compiler", version = "2.4.3" }
ctxhelm-core = { path = "../ctxhelm-core", version = "2.4.3" }
ctxhelm-index = { path = "../ctxhelm-index", version = "2.4.3" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
