[package]
name = "ctxhelm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description.workspace = true
rust-version.workspace = true

[features]
default = []
local-embeddings = [
  "ctxhelm-compiler/local-embeddings",
  "ctxhelm-index/local-embeddings",
  "ctxhelm-mcp/local-embeddings",
]

[dependencies]
anyhow.workspace = true
blake3.workspace = true
clap.workspace = true
ctxhelm-compiler = { path = "../ctxhelm-compiler", version = "1.1.12" }
ctxhelm-core = { path = "../ctxhelm-core", version = "1.1.12" }
ctxhelm-index = { path = "../ctxhelm-index", version = "1.1.12" }
ctxhelm-mcp = { path = "../ctxhelm-mcp", version = "1.1.12" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
tempfile.workspace = true
uuid.workspace = true
