[package]
name = "ctxpack-compiler"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
ctxpack-core = { path = "../ctxpack-core" }
ctxpack-index = { path = "../ctxpack-index" }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
