[package]
name = "ctxpack-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description.workspace = true
rust-version.workspace = true

[dependencies]
ctxpack-core = { path = "../ctxpack-core" }
ctxpack-index = { path = "../ctxpack-index" }
serde.workspace = true
tempfile.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
serde_json.workspace = true
