[package]
name = "ctxpack-index"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
ctxpack-core = { path = "../ctxpack-core" }
ignore.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid = { workspace = true, features = ["v5"] }

[dev-dependencies]
tempfile.workspace = true
