[package]
name = "ctxpack-index"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description.workspace = true
rust-version.workspace = true

[features]
default = []
local-embeddings = ["dep:fastembed"]

[dependencies]
blake3.workspace = true
ctxpack-core = { path = "../ctxpack-core" }
fastembed = { workspace = true, optional = true }
ignore.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid = { workspace = true, features = ["v5"] }

[dev-dependencies]
tempfile.workspace = true
