[package]
name = "ctxpack-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description.workspace = true
rust-version.workspace = true

[dependencies]
ctxpack-compiler = { path = "../ctxpack-compiler" }
ctxpack-core = { path = "../ctxpack-core" }
ctxpack-index = { path = "../ctxpack-index" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
