[package]
name = "ctxpack"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description.workspace = true
rust-version.workspace = true

[features]
default = []
local-embeddings = [
  "ctxpack-compiler/local-embeddings",
  "ctxpack-index/local-embeddings",
  "ctxpack-mcp/local-embeddings",
]

[dependencies]
anyhow.workspace = true
clap.workspace = true
ctxpack-compiler = { path = "../ctxpack-compiler" }
ctxpack-core = { path = "../ctxpack-core" }
ctxpack-index = { path = "../ctxpack-index" }
ctxpack-mcp = { path = "../ctxpack-mcp" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
tempfile.workspace = true
uuid.workspace = true
